# BioNexus

./: .biocracker_cache_marker  .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_init.py  0002_rev.py  0003_rev.py  0004_rev.py  0005_rev.py  0006_rev.py  0007_rev.py  _init.py
bionexus/: cli.py  config.py
bionexus/db/: engine.py  models.py  search.py
bionexus/etl/: chemistry.py
bionexus/etl/sources/: mibig.py  npatlas.py  npclassifier.py  retromol.py
bionexus/utils/: io.py  logging.py  net.py
docker/: Dockerfile.app
scripts/: collect_chebi_annotations.py  filter_gbk_by_product.py  find_congeners.py  get_annotations_npatlas.py  parse_asdb.py  plot_biosynthetic_space.py  query.py  run_etl_npatlas.sh
src/bionexus/: cli.py  config.py  version.py
src/bionexus/db/: benchmark.py  engine.py  models.py  search.py
src/bionexus/etl/: annotation.py  chemistry.py  cluster.py  compound.py  retromol.py
src/bionexus/etl/sources/: biocracker.py  chebi.py  mibig.py  npatlas.py  npclassifier.py  retromol.py
src/bionexus/utils/: io.py  logging.py  net.py
