[tool.poetry]
name = "bionexus"
version = "1.0.0"
description = "Bionexus: Postgres schema + NPAtlas ETL (argparse)"
authors = ["David Meijer <you@example.com>"]
packages = [{ include = "bionexus" }]

[tool.poetry.dependencies]
python = ">=3.10"
SQLAlchemy = "^2.0"
psycopg = {version = "^3.2", extras=["binary"]}
alembic = "^1.13"
python-dotenv = "^1.0"
rich = "^13.7"
rdkit = {version = "*", optional = true}
pgvector = "^0.3.1"
ijson = "^3.4.0"
tqdm = "^4.67.1"
pandas = "^2.3.3"
biopython = {version = "^1.83", optional = true}
aiohttp = "^3.13.0"
retromol = {version = "^1.0.1", optional = true}

[tool.poetry.extras]
chem = ["rdkit"]
bio = ["biopython"]
retromol = ["retromol"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bionexus = "bionexus.cli:main"