[project]
name = "bionexus"
version = "2.0.0"
description = "BioNexus facilitates cross-modal retrieval between natural products and biosynthetic gene clusters"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = [
    "LICENSE",
]
authors = [
    { name = "David Meijer", email = "david.meijer@wur.nl" }
]
keywords = ["retrieval", "cross-modal", "natural-products", "biosynthetic-gene-clusters"]

dependencies = [
    "SQLAlchemy",
    "psycopg[binary]>=3.2,<4.0",
    "alembic",
    "python-dotenv",
    "rich",
    "rdkit",
    "pgvector",
    "ijson",
    "tqdm",
    "pandas",
    "biopython",
    "aiohttp",
    "retromol",
    "biocracker",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[project.urls]
Homepage = "https://github.com/moltools/bionexus"
Repository = "https://github.com/moltools/bionexus"
Issues = "https://github.com/moltools/bionexus/issues"
Documentation = "https://github.com/moltools/bionexus#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bionexus"]
sources = ["src"]
include = []

[project.scripts]
bionexus = "bionexus.cli:main"

# -------------------------
# Hatch env + scripts
# -------------------------
[tool.hatch.envs.dev]
features = ["dev"]
python = "3.10"
